[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/hp_filled.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/pressE.png" type="Texture" id=2]
[ext_resource path="res://scripts/MapPoint.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/circle.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/lock.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ok.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/powerUp.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/hp_add.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/stat_upgrade.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 13.1529

[sub_resource type="Animation" id=2]
resource_name = "Press"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Press:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Point" type="Node2D"]
position = Vector2( 134, 87 )
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 4 )

[node name="Press" type="Sprite" parent="."]
visible = false
position = Vector2( 14, -11 )
scale = Vector2( 1.0451, 1.0451 )
texture = ExtResource( 2 )

[node name="Lock" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Finished" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="Rewards" type="Node2D" parent="."]
visible = false

[node name="health" type="Sprite" parent="Rewards"]
visible = false
texture = ExtResource( 1 )

[node name="upgrade" type="Sprite" parent="Rewards"]
visible = false
texture = ExtResource( 7 )

[node name="maxHealth" type="Sprite" parent="Rewards"]
visible = false
texture = ExtResource( 8 )

[node name="statUpgrade" type="Sprite" parent="Rewards"]
visible = false
texture = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PressAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Press = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
